--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         </form>
 
         <div id="preview">
-            <!-- Preview report akan keluar sini -->
+            <!-- Preview laporan akan muncul di sini -->
         </div>
     </main>
 
