--- a/index.html
+++ b/index.html
@@ -12,17 +12,17 @@
 
     <!-- HEADER SEKOLAH -->
     <div class="school-header">
-        <img src="images/logo.png" class="logo" alt="Logo Sekolah">
+        <img src="images/logo.png" class="logo">
         <div class="school-text">
             <h2>SK LUBOK TERUA</h2>
             <p>28500 LANCHANG, PAHANG DARUL MAKMUR</p>
         </div>
-        <img src="images/logo2.png" class="logo" alt="Logo Tambahan">
+        <img src="images/logo2.png" class="logo">
     </div>
 
     <!-- TAJUK WEBPAGE -->
     <h1 class="page-title">ONE PAGE REPORT</h1>
-    <p class="page-subtitle">Laporan Program Sekolah (Satu Halaman)</p>
+    <p class="page-subtitle">Laporan Program Sekolah</p>
 
     <!-- BORANG -->
     <form id="reportForm">
@@ -57,13 +57,11 @@
         <input type="file" name="gambar3" accept="image/*">
         <input type="file" name="gambar4" accept="image/*">
 
-        <button type="button" onclick="generateReport()">
-            Jana One Page Report
-        </button>
+        <button type="button" onclick="generateReport()">Jana One Page Report</button>
 
     </form>
 
-    <!-- PREVIEW LAPORAN -->
+    <!-- PREVIEW -->
     <div id="preview"></div>
 
 </main>
